@@ -2,7 +2,8 @@
 
 DRIVERS = lmrob_simulation psi_functions fastMcd-kmini
 
-Extras = lmrob_simulation_gg2
+Extras =
+# 	lmrob_simulation_gg2
 
 #R_PROG = R-devel
 R_PROG = R
